k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lab-app-svc
  namespace: hsbc-lab
spec:
  selector:
    app: lab-app
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
